--- a/_vti_cnf/main-sep16.html
+++ b/_vti_cnf/main-sep16.html
@@ -18,3 +18,5 @@ vti_metatags:VR|viewport width=device-width,\\ initial-scale=1.0,\\ maximum-scal
 vti_charset:SR|utf-8
 vti_title:SR|Stanford Catholic
 vti_backlinkinfo:VX|
+vti_syncwith_68.178.246.6\:21/stanford:TX|16 Sep 2013 19:15:29 -0000
+vti_syncofs_68.178.246.6\:21/stanford:TW|18 Sep 2013 12:45:10 -0000
