--- a/_vti_cnf/main.html
+++ b/_vti_cnf/main.html
@@ -19,3 +19,5 @@ vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
 vti_metatags:VR|viewport width=device-width,\\ initial-scale=1.0,\\ maximum-scale=1.0,\\ minimum-scale=1.0,\\ user-scalable=no HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8 HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8 HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8 HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
 vti_charset:SR|utf-8
+vti_syncwith_68.178.246.6\:21/stanford:TX|18 Sep 2013 12:40:33 -0000
+vti_syncofs_68.178.246.6\:21/stanford:TW|18 Sep 2013 12:45:10 -0000
